<resources>
    <string name="app_name">Ping</string>

    <string-array name="bt_reason">
        <item>The reason for disconnection is not known</item> <!-- -1 -->
        <item>The disconnection was initiated by the user</item> <!-- 0 -->
        <item>The local device initiated disconnection</item> <!-- 1 -->
        <item>The remote device initiated graceful disconnection</item> <!-- 2 -->
        <item>Link lost</item> <!-- 3 -->
        <item>The device does not have the required services</item> <!-- 4 -->
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>The connection timed out</item><!-- 10 -->
    </string-array>

    <!-- Order must match BT_STATE values -->
    <string-array name="bt_status">
        <item>Disconnected from %1$s</item>
        <item>Connecting to %1$s</item>
        <item>Connected to %1$s</item>
        <item>%1$s is ready</item>
        <item>Disconnecting from %1$s</item>
        <item>Connect %1$s failed: %2$s</item>
    </string-array>

    <string name="cancel">Cancel</string>

    <string name="depth_unknown">Depth unknown</string>
    <string name="device">Device</string>

    <string name="help_autoconnect">Automatically connect to the first compatible device found. Otherwise wait for you to select a device.</string>
    <string name="help_bt_address">FF:FF:FF:FF:FF:FF</string>
    <string name="help_change_device">Connect to a different device</string>
    <string name="help_maxSamples">Maximum number of samples to save before overwriting older samples. The number in brackets is the amount of memory required.</string>
    <string name="help_minimumDepthChange">The minimum depth difference that must be seen before a sample will be recorded, in metres</string>
    <string name="help_minimumPositionChange">The minimum horizontal distance that must be moved before a sample will be recorded, in metres</string>
    <string name="help_no_bluetooth">No bluetooth support on this device</string>
    <string name="help_noise">Use higher settings for turbid water or where there are suspended solids</string>
    <string name="help_range">Set as close to the estimated depth as possible for best detection results</string>
    <string name="help_sampleFile">Click to change the file to store samples in</string>
    <string name="help_scan_all">Scanning for a compatible device&#x2026; touch a device to connect to it</string>
    <string name="help_scan_first">Scanning for a compatible device&#x2026;</string>
    <string name="help_sensitivity">Intensity of the sonar pulse. When the water is shallow, or there is noise in the water such as engine noise, select a lower sensitivity</string>

    <string name="menuitem_settings">Settings</string>

    <!-- See Ping.NOISE_* -->
    <string-array name="noise_options">
        <item>Off</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string-array name="noise_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="notification_launch">Open Ping</string>
    <string name="notification_stop">Stop logging</string>
    <string name="notification_title">Ping at %1$s</string>

    <string name="OK">OK</string>

    <string-array name="permissions_required">
        <item>android.permission.BLUETOOTH</item>
        <item>android.permission.BLUETOOTH_ADMIN</item>
        <item>android.permission.ACCESS_FINE_LOCATION</item>
    </string-array>
    <!-- Rationales for requiring permissions. Same order as required_permissions -->
    <string-array name="permission_rationales">
        <item>Permission to access Bluetooth devices is required</item>
        <item>Permission to administer Bluetooth devices is required</item>
        <item>Permission to access the fine location of this device is required</item>
    </string-array>
    <string name="pref_autoconnect">Auto Connect</string>
    <string name="pref_depth_delta">Minimum depth change</string>
    <string name="pref_max_samples">Maximum samples</string>
    <string name="pref_noise">Noise</string>
    <string name="pref_pos_delta">Minimum position change</string>
    <string name="pref_range">Range</string>
    <string name="pref_sample_file">Sample File</string>
    <string name="pref_sensitivity">Sensitivity</string>

    <!-- See Ping.RANGE_* -->
    <string-array name="range_options">
        <item>3m</item>
        <item>6m</item>
        <item>9m</item>
        <item>18m</item>
        <item>24m</item>
        <item>36m</item>
        <item>Auto</item>
    </string-array>
    <string-array name="range_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <!-- reasons why bluetooth state changed -->
    <string name="reason_cleaning_up">: cleaning up</string>
    <string name="reason_connection_lost">" - connection lost"</string>
    <string name="reason_uuid_ccc">: device does not offer descriptor CLIENT_CHARACTERISTIC_CONFIGURATION</string>
    <string name="reason_uuid_custom">: device does not offer service CUSTOM</string>
    <string name="reason_uuid_custom_sample">: device does not offer characteristic CUSTOM_SAMPLE</string>
    <string name="reason_gatt_connect_failed">: GATT connect failed</string>
    <string name="reason_gatt_disconnected">: GATT disconnected</string>
    <string name="reason_new_gatt"> using existing GATT</string>
    <string name="reason_no_device">: no device, is bluetooth supported?</string>
    <string name="reason_osd_failed">: service discovery failed</string>
    <string name="reason_none"> OK</string>

    <string name="sample_file_unset">Sample file location must be set to enable recording</string>
    <string name="service_description">Background service for Ping</string>
    <string name="start_recording">Start recording</string>

    <string name="val_battery">Battery: %1$d</string>
    <string name="val_depth">Depth: %1$.2gm</string>
    <string name="val_fish_depth">Fish Depth: %1$.2gm</string>
    <string name="val_fish_strength">Fish Strength: %1$d</string>
    <string name="val_latitude">Latitude: %1$.5g</string>
    <string name="val_longitude">Longitude: %1$.5g</string>
    <string name="val_noise">Noise filter: %1$s</string>
    <string name="val_range">Range %1$s</string>
    <string name="val_logging_count">Samples: %1$d</string>
    <string name="val_logging_rate">Rate: %1$.2gHz</string>
    <string name="val_logging_time">Time: %1$s</string>
    <string name="val_sensitivity">Sensitivity: %1$d</string>
    <string name="val_strength">Strength: %1$d</string>
    <string name="val_temperature">Temperature: %1$.2g°C</string>
    <string name="default_device_name">Unspecified Bluetooth Device</string>
    <string name="could_not_start_logging">Could not start logging</string>
    <string name="write_gpx_failed">Could not write GPX file</string>
    <string name="write_gpx_OK">GPX data written</string>
</resources>
